fix responsive behaviour of the main translator view, on mobile. Fixes #35

--- a/Frontend/translator/src/app/translator/translator.css
+++ b/Frontend/translator/src/app/translator/translator.css
@@ -90,27 +90,6 @@ limitations under the License. */
   }
 }
 
-@media screen and (max-width: 850px) {
-  .translator-container {
-    flex-direction: column;
-  }
-
-  .translator-switch-button {
-    width: 60px;
-    height: 60px;
-  }
-
-  .translator-footer {
-    position: absolute;
-    bottom: 2%;
-    right: 3%;
-  }
-
-  .translator-footer strong {
-    font-size: 14px;
-  }
-}
-
 @keyframes fadeInScale {
   0% {
     opacity: 0;
@@ -145,7 +124,36 @@ limitations under the License. */
   animation: fadeInScale 0.6s cubic-bezier(0.4, 0, 0.2, 1) 1.8s both;
 }
 
+.card-container {
+  width: 50dvw;
+  height: 100dvh;
+}
+
+.card-container-left {
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+
 @media screen and (max-width: 850px) {
+  .translator-container {
+    flex-direction: column;
+  }
+
+  .translator-switch-button {
+    width: 60px;
+    height: 60px;
+  }
+
+  .translator-footer {
+    position: absolute;
+    bottom: 2%;
+    right: 3%;
+  }
+
+  .translator-footer strong {
+    font-size: 14px;
+  }
+
   .translator-restriction-notice {
     bottom: 20%;
     width: 90%;
@@ -155,6 +163,16 @@ limitations under the License. */
     flex-direction: column;
     gap: 1rem;
     text-align: center;
+  }
+  
+  .card-container {
+    width: 100dvw;
+    height: 50dvh;
+  }
+  
+  .card-container-left {
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
   }
 }
 
